# login-robotFramework

./: .gitignore  README.md  pyproject.toml
logs/: log.html  output.xml  report.html
resources/: base.resource
resources/actions/: auth.robot
tests/: login.robot
